Improve tests, remove unsigned long